// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ICalCalendarCalzone renderToString() renders the calendar with all three time zone components 1`] = `
"BEGIN:VCALENDAR
PRODID:-//My Company X//My Product Name//XX
VERSION:2.0
CALSCALE:GREGORIAN
TIMEZONE-ID:Europe/Paris
X-WR-TIMEZONE:Europe/Paris
BEGIN:VTIMEZONE
TZID:Europe/Paris
BEGIN:STANDARD
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
DTSTART:19701025T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
DTSTART:19700329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:Europe/London
BEGIN:STANDARD
TZNAME:GMT
TZOFFSETFROM:+0100
TZOFFSETTO:+0000
DTSTART:19701025T020000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:BST
TZOFFSETFROM:+0000
TZOFFSETTO:+0100
DTSTART:19700329T010000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:Europe/Berlin
BEGIN:STANDARD
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
DTSTART:19701025T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
DTSTART:19700329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:testuid1
SEQUENCE:1
DTSTAMP:20210515T000000Z
DTSTART;TZID=Europe/London:20210515T010000
DTEND;TZID=Europe/London:20210516T010000
SUMMARY:Test 1
END:VEVENT
BEGIN:VEVENT
UID:testuid2
SEQUENCE:1
DTSTAMP:20210515T000000Z
DTSTART;TZID=Europe/Berlin:20210515T020000
DTEND;TZID=Europe/Berlin:20210516T020000
SUMMARY:Test 2
END:VEVENT
END:VCALENDAR"
`;

exports[`ICalCalendarCalzone renderToString() renders the calendar with resolved time zone components, ingnores the unresolved time zone 1`] = `
"BEGIN:VCALENDAR
PRODID:-//My Company X//My Product Name//XX
VERSION:2.0
CALSCALE:GREGORIAN
TIMEZONE-ID:Something/Wrong
X-WR-TIMEZONE:Something/Wrong
BEGIN:VTIMEZONE
TZID:Europe/London
BEGIN:STANDARD
TZNAME:GMT
TZOFFSETFROM:+0100
TZOFFSETTO:+0000
DTSTART:19701025T020000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:BST
TZOFFSETFROM:+0000
TZOFFSETTO:+0100
DTSTART:19700329T010000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:Europe/Berlin
BEGIN:STANDARD
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
DTSTART:19701025T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
DTSTART:19700329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:testuid1
SEQUENCE:1
DTSTAMP:20210515T000000Z
DTSTART;TZID=Europe/London:20210515T010000
DTEND;TZID=Europe/London:20210516T010000
SUMMARY:Test 1
END:VEVENT
BEGIN:VEVENT
UID:testuid2
SEQUENCE:1
DTSTAMP:20210515T000000Z
DTSTART;TZID=Europe/Berlin:20210515T020000
DTEND;TZID=Europe/Berlin:20210516T020000
SUMMARY:Test 2
END:VEVENT
END:VCALENDAR"
`;
